up api news file delete